# jaxqmc

./: README.md  pyproject.toml
examples/: plot_distributions.py
src/jaxqmc/: __init__.py  main.py  qmc.py
tests/: test_qmc.py
