[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxqmc"
version = "0.1.0"
description = "Quasi-Monte Carlo sampling with JAX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["I", "E", "F", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/jaxqmc"]
